--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -11,9 +11,9 @@
 <h3 class="mb-4">Employee Management</h3>
 
 <div style="max-width:1100px"> 
-     <SfGrid DataSource="employeeData" Toolbar="@toolbar">
+     <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" Toolbar="@toolbar">
          <GridEditSettings AllowEditing="true" AllowAdding="true" AllowDeleting="true"></GridEditSettings>
-         <GridEvents OnActionBegin="ActionBeginHandler" TValue="EmployeeModel"> </GridEvents>
+         <GridEvents OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
          <GridColumns>
          <GridColumn IsPrimaryKey="true" Field="@nameof(EmployeeModel.Id)" Width="50px"></GridColumn>
          <GridColumn HeaderText="Profile" Width="120px">
@@ -100,6 +100,7 @@
         Male,
         Female
     }
+    private SfGrid<EmployeeModel>? SfEmployeeGrid { get; set; }
     private bool VisibleProp { get; set; } = false;
     private string[] genderCollection = Enum.GetNames(typeof(GenderVal));
     private List<EmployeeModel>? employeeData = null;
@@ -127,6 +128,15 @@
             {
                 await EmployeeManagementService.AddEmployee(args.Data);
             }
+        }
+    }
+
+    public async void ActionCompleteHandler(ActionEventArgs<EmployeeModel>args)
+    {
+        if (args.RequestType.Equals(Syncfusion.Blazor.Grids.Action.Save))
+        {
+            employeeData = await EmployeeManagementService.GetEmployees();
+            SfEmployeeGrid?.Refresh();
         }
     }
 }
