--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -4,6 +4,7 @@
 @using SalesManagementApp.Services.Contracts;
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Navigations;
 @using Syncfusion.Blazor.Spinner
 
 @inject IEmployeeManagementService EmployeeManagementService
@@ -11,9 +12,9 @@
 <h3 class="mb-4">Employee Management</h3>
 
 <div style="max-width:1100px"> 
-     <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" AllowSorting="true" Toolbar="@toolbar">
+     <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" AllowPdfExport="true" AllowSorting="true" AllowExcelExport ="true" Toolbar="@toolbar">
          <GridEditSettings AllowEditing="true" AllowAdding="true" AllowDeleting="true"></GridEditSettings>
-         <GridEvents OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
+         <GridEvents  CommandClicked = "OnCommandClicked" OnToolbarClick="ToolbarBtnClickHandler" OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
          <GridColumns>
          <GridColumn AllowAdding="false" IsPrimaryKey="true" Field="@nameof(EmployeeModel.Id)" Width="50px"></GridColumn>
          <GridColumn HeaderText="Profile" Width="120px">
@@ -71,6 +72,61 @@
                 </EditTemplate>
 
             </GridForeignColumn>
+            <GridColumn HeaderText="Operations" Width="110px">
+                <GridCommandColumns>
+                    <GridCommandColumn Type = "CommandButtonType.Edit"
+                                 ButtonOption="@(new CommandButtonOptions(){
+                                                IconCss = "e-icons e-edit",
+                                                CssClass = "e-flat"
+                                                })">
+
+                    </GridCommandColumn>
+
+                    <GridCommandColumn Type="CommandButtonType.Delete"
+                                       ButtonOption="@(new CommandButtonOptions(){
+                                                IconCss = "e-icons e-delete",
+                                                CssClass = "e-flat"
+                                                })">
+
+                    </GridCommandColumn>
+
+                    <GridCommandColumn Type = "CommandButtonType.Save"
+                                 ButtonOption="@(new CommandButtonOptions(){
+                                                IconCss = "e-icons e-update",
+                                                CssClass = "e-flat"
+                                                })">
+
+                    </GridCommandColumn>
+
+                    <GridCommandColumn Type="CommandButtonType.Cancel"
+                                       ButtonOption="@(new CommandButtonOptions(){
+                                                IconCss = "e-icons e-cancel",
+                                                CssClass = "e-flat"
+                                                })">
+
+                    </GridCommandColumn>
+                </GridCommandColumns>
+            </GridColumn>
+            
+            <GridColumn HeaderText="Custom Operations" Width="110">
+                <GridCommandColumns>
+                                    <GridCommandColumn 
+                                   ButtonOption="@(new CommandButtonOptions(){
+                                                  Content = "01",
+                                                  CssClass = "e-outline"
+
+                                                })">
+                                   </GridCommandColumn>
+                                   <GridCommandColumn
+                                   ButtonOption="@(new CommandButtonOptions(){
+                                                  Content = "02",
+                                                  CssClass = "e-outline"
+
+                                                })">
+                                   </GridCommandColumn>
+             </GridCommandColumns>
+
+            </GridColumn>
          @* <GridColumn HeaderText="Reports" Field="@nameof(EmployeeModel.ReportToEmpId)" Width="100px"></GridColumn> *@
          </GridColumns>
          <SfSpinner @bind-Visible ="@VisibleProp"> 
@@ -106,7 +162,9 @@
     private List<EmployeeModel>? employeeData = null;
     private List<EmployeeJobTitle>? employeeJobTitleData;
     private List<ReportToModel>? reportToEmployeeData;
-    private List<object> toolbar = new List<object> {"Add", "Edit", "Delete", "Update","Cancel", "Search", "ExcelExport" };
+    private List<object> toolbar = new List<object> {"Add", "Edit", "Delete", "Update","Cancel", "Search", "ExcelExport","PdfExport",
+                                                     new ItemModel(){Text = "XML Export",TooltipText="Export Data to XML",
+                                                     PrefixIcon = "ë-click", Id = "xmlExport"} };
 
     protected override async Task OnInitializedAsync()
     {
@@ -151,4 +209,30 @@
             }
         }
     }
+    public async void ToolbarBtnClickHandler(Syncfusion.Blazor.Navigations.ClickEventArgs args)
+    {
+        if (args.Item.Id.Contains("_excelexport"))
+        {
+            await SfEmployeeGrid?.ExportToExcelAsync();
+        }
+        else if(args.Item.Id.Contains("_pdfexport"))
+        {
+            await SfEmployeeGrid?.ExportToPdfAsync();
+        }
+        else if (args.Item.Id =="XmlExport")
+        {
+            Console.Write("Export to Xml functionality");
+        }
+    }public async void OnCommandClicked (CommandClickEventArgs<EmployeeModel> args)
+    {
+        if(args.CommandColumn.ButtonOption.Content == "01")
+        {
+            Console.Write("Custom Operation 1");
+        }
+        else if (args.CommandColumn.ButtonOption.Content == "02")
+        {
+            Console.Write("Custom Operation 2");
+        }
+    }
+
 }
