Another Major Update

--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -2,6 +2,7 @@
 @using SalesManagementApp.Entities;
 @using SalesManagementApp.Models;
 @using SalesManagementApp.Services.Contracts;
+@using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Grids
 @using Syncfusion.Blazor.Navigations;
@@ -12,12 +13,28 @@
 <h3 class="mb-4">Employee Management</h3>
 
 <div style="max-width:1100px"> 
-     <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" AllowPdfExport="true" AllowSorting="true" AllowExcelExport ="true" Toolbar="@toolbar">
-         <GridEditSettings AllowEditing="true" AllowAdding="true" AllowDeleting="true"></GridEditSettings>
-         <GridEvents  CommandClicked = "OnCommandClicked" OnToolbarClick="ToolbarBtnClickHandler" OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
+     <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" AllowGrouping="true" AllowPaging="true" AllowFiltering="true" AllowExcelExport ="true" Toolbar="@toolbar">
+         <GridEditSettings Mode = "EditMode.Batch" AllowEditing="true" AllowAdding="true" AllowDeleting="true">
+             <HeaderTemplate>
+                 <span>@(GetDialogHeaderText(context as EmployeeModel))</span>
+             </HeaderTemplate>
+
+             @* <FooterTemplate>
+                <SfButton OnClick="@Save" IsPrimary="true"> @DialogButtonCaption</SfButton>
+                 <SfButton OnClick = "@Cancel">Cancel> </SfButton>
+             </FooterTemplate>
+ *@
+                 <FooterTemplate>
+                     <SfButton OnClick="@Save" IsPrimary = "true">@DialogButtonCaption</SfButton>
+                     <SfButton OnClick="@Cancel">Cancel</SfButton>
+                 </FooterTemplate>
+         </GridEditSettings>
+         <GridPageSettings PageSize="5"></GridPageSettings>
+         <GridFilterSettings Type = "Syncfusion.Blazor.Grids.FilterType.Menu"></GridFilterSettings>
+         <GridEvents OnBatchSave="OnBatchUpdateHandler" CommandClicked = "OnCommandClicked" OnToolbarClick="ToolbarBtnClickHandler" OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
          <GridColumns>
-         <GridColumn AllowAdding="false" IsPrimaryKey="true" Field="@nameof(EmployeeModel.Id)" Width="50px"></GridColumn>
-         <GridColumn HeaderText="Profile" Width="120px">
+         <GridColumn AllowAdding = "false" AllowEditing = "false" IsPrimaryKey="true" Field="@nameof(EmployeeModel.Id)" Width="50px"></GridColumn>
+            <GridColumn AllowAdding="false" AllowEditing = "false" HeaderText="Profile" Width="120px">
              <Template>
                  @{
                    var employee = (context as EmployeeModel);
@@ -156,15 +173,21 @@
         Male,
         Female
     }
+    private string DialogButtonCaption { get; set; }
     private SfGrid<EmployeeModel>? SfEmployeeGrid { get; set; }
     private bool VisibleProp { get; set; } = false;
     private string[] genderCollection = Enum.GetNames(typeof(GenderVal));
     private List<EmployeeModel>? employeeData = null;
     private List<EmployeeJobTitle>? employeeJobTitleData;
     private List<ReportToModel>? reportToEmployeeData;
-    private List<object> toolbar = new List<object> {"Add", "Edit", "Delete", "Update","Cancel", "Search", "ExcelExport","PdfExport",
+    // private List<object> toolbar = new List<object> {"Add", "Edit", "Delete", "Update","Cancel", "Search", "ExcelExport","PdfExport",
+    //                                                  new ItemModel(){Text = "XML Export",TooltipText="Export Data to XML",
+    //                                                  PrefixIcon = "ë-click", Id = "xmlExport"} };
+    private List<object> toolbar = new List<object> {"Add", "Search", "Update", "Cancel", "ExcelExport","PdfExport",
                                                      new ItemModel(){Text = "XML Export",TooltipText="Export Data to XML",
                                                      PrefixIcon = "ë-click", Id = "xmlExport"} };
+
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -235,4 +258,46 @@
         }
     }
 
+    private string GetDialogHeaderText(EmployeeModel employeeModel)
+    {
+        if(employeeModel.Id ==0)
+        {
+            DialogButtonCaption = "Add";
+            return "Add Employee";
+        }
+        else
+        {
+            DialogButtonCaption = "Update"; 
+            return $"Edit Details: {employeeModel.FirstName} {employeeModel.LastName}"; 
+        }
+    }
+    private async Task Cancel()
+    {
+        await SfEmployeeGrid.CloseEditAsync();
+    }
+    private async Task Save()
+    {
+        await SfEmployeeGrid.EndEditAsync();
+    }
+
+    public async Task OnBatchUpdateHandler(BeforeBatchSaveArgs<EmployeeModel> args)
+    {
+        var addedRecords = args.BatchChanges.AddedRecords;
+        var updatedRecords = args.BatchChanges.ChangedRecords;
+        var deletedRecords = args.BatchChanges.DeletedRecords;
+
+        foreach(EmployeeModel employee in addedRecords)
+        {
+            await EmployeeManagementService.AddEmployee(employee);
+        }
+        foreach(EmployeeModel employee in updatedRecords)
+        {
+            await EmployeeManagementService.UpdateEmployee(employee);
+        }
+        foreach (EmployeeModel employee in deletedRecords)
+        {
+            await EmployeeManagementService.DeleteEmployee(employee.Id);
+        }
+
+    }
 }
