--- a/SalesManagementApp/Pages/ProductCatalog.razor
+++ b/SalesManagementApp/Pages/ProductCatalog.razor
@@ -1,6 +1,54 @@
 ﻿@page "/ProductCatalog"
-<h3>ProductCatalog</h3>
+@using Syncfusion.Blazor.Lists
+@inject IProductService ProductService
+@using System.Globalization
+<h3>Product Catalog</h3>
 
+<div class="row mt-3">
+    <div class="col-12">
+        <SfListView DataSource="ProductData"  ShowCheckBox="true" CssClass="e-list-template listview-template">
+            <ListViewFieldSettings TValue="ProductModel" Id="Id" Text="Name" GroupBy="CategoryName">
+            </ListViewFieldSettings>
+            <ListViewTemplates TValue="ProductModel" >
+                <Template>
+                    <div class="e-list-wrapper e-list-multi-line">
+                        <span class="e-list-content"> 
+                            <img src="@context.ImagePath" class="img-class" />
+                        </span>
+                        <span class="e-list-content"><h5>@context.Name</h5></span>
+                        <span class="e-list-content"><b>@context.Price.ToString("C", CultureInfo.CreateSpecificCulture("da-US"))</b></span>
+                        <span class=" e-list-content">@context.Description</span>
+                        
+
+                    </div>
+                </Template>
+               <GroupTemplate>
+                   <h4>@context.Text</h4>
+               </GroupTemplate>
+            </ListViewTemplates>
+        </SfListView>
+    </div>
+</div>
+<style>
+    .listview-template{
+        max-width:800px;
+        border-radius: 2px;
+        height: 470px;
+        box-shadow:0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        padding: 20px;
+    }
+    .img-class{
+        height:90px;
+        width:150px;
+
+    }
+</style>
 @code {
+    private List<ProductModel>ProductData{ get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        ProductData = await ProductService.GetProducts();
+    }
 
 }
