--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -31,7 +31,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ProductCatalog">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Products
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Products
             </NavLink>
         </div>
     </nav>
