--- a/SalesManagementApp/Pages/ProductCatalog.razor
+++ b/SalesManagementApp/Pages/ProductCatalog.razor
@@ -1,10 +1,18 @@
 ﻿@page "/ProductCatalog"
+@using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Lists
-@inject IProductService ProductService
 @using System.Globalization
+@inject IProductService ProductService
+@inject IClientService ClientService
 <h3>Product Catalog</h3>
 
 <div class="row mt-3">
+    <div class="col-12">
+        <SfComboBox CssClass="client-combo" DataSource="ClientData" TValue="int" TItem="ClientModel"
+            @bind-Value="ClientId">
+            <ComboBoxFieldSettings Text="RetailOutletName" Value="Id"></ComboBoxFieldSettings>
+        </SfComboBox>
+    </div>
     <div class="col-12">
         <SfListView DataSource="ProductData"  ShowCheckBox="true" CssClass="e-list-template listview-template">
             <ListViewFieldSettings TValue="ProductModel" Id="Id" Text="Name" GroupBy="CategoryName">
@@ -42,13 +50,20 @@
         width:150px;
 
     }
+    .client-combo{
+        max-width: 800px;
+
+    }
 </style>
 @code {
+    private int ClientId { get; set; } = 1;
     private List<ProductModel>ProductData{ get; set; }
+    private List<ClientModel> ClientData {get; set;}  
 
     protected override async Task OnInitializedAsync()
     {
         ProductData = await ProductService.GetProducts();
+        ClientData = await ClientService.GetClients();
     }
 
 }
