--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -11,7 +11,7 @@
 
 <div style="max-width:1100px"> 
      <SfGrid @ref="SfEmployeeGrid" DataSource="employeeData" AllowGrouping="true" AllowPaging="true" AllowFiltering="true" AllowExcelExport ="true" Toolbar="@toolbar">
-         <GridEditSettings Mode = "EditMode.Batch" AllowEditing="true" AllowAdding="true" AllowDeleting="true">
+         <GridEditSettings Mode = "EditMode.Dialog" AllowEditing="true" AllowAdding="true" AllowDeleting="true">
              <HeaderTemplate>
                  <span>@(GetDialogHeaderText(context as EmployeeModel))</span>
              </HeaderTemplate>
@@ -29,6 +29,8 @@
          <GridPageSettings PageSize="5"></GridPageSettings>
          <GridFilterSettings Type = "Syncfusion.Blazor.Grids.FilterType.Menu"></GridFilterSettings>
          <GridEvents OnBatchSave="OnBatchUpdateHandler" CommandClicked = "OnCommandClicked" OnToolbarClick="ToolbarBtnClickHandler" OnActionBegin="ActionBeginHandler" OnActionComplete="ActionCompleteHandler" TValue="EmployeeModel"> </GridEvents>
+
+
          <GridColumns>
          <GridColumn AllowAdding = "false" AllowEditing = "false" IsPrimaryKey="true" Field="@nameof(EmployeeModel.Id)" Width="50px"></GridColumn>
             <GridColumn AllowAdding="false" AllowEditing = "false" HeaderText="Profile" Width="120px">
@@ -38,7 +40,7 @@
                    <div class=" profile-image-container">
                    <img src="@(employee?.ImagePath)"/>
                    </div>
-                 }
+                 }   
              </Template>
          </GridColumn>
          <GridColumn HeaderText="First Name" Field="@nameof(EmployeeModel.FirstName)" Width="120px"></GridColumn>
