--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Products
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Charts">
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Charts
+            </NavLink>
+        </div>
     </nav>
 </div>
 
