We call it a day

--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -187,7 +187,7 @@
                                                      PrefixIcon = "ë-click", Id = "xmlExport"} };
 
 
-
+    //Gets Data from for ex. a database or a service
     protected override async Task OnInitializedAsync()
     {
         VisibleProp = true;
