--- a/SalesManagementApp/_Imports.razor
+++ b/SalesManagementApp/_Imports.razor
@@ -11,3 +11,4 @@
 @using SalesManagementApp.Entities;
 @using SalesManagementApp.Models;
 @using SalesManagementApp.Services.Contracts;
+@using SalesManagementApp.Models.ReportModels;
