--- a/SalesManagementApp/Pages/Charts.razor
+++ b/SalesManagementApp/Pages/Charts.razor
@@ -15,12 +15,35 @@
 </SfChart>
 </div>
 
+<div class="mt-3">
+    <SfAccumulationChart Title="Qty / Product Category">
+      <AccumulationChartLegendSettings Visible="true" Position="LegendPosition.Top">
+      </AccumulationChartLegendSettings>
+      <AccumulationChartTooltipSettings Enable="true">
+      </AccumulationChartTooltipSettings>
+      <AccumulationChartSeriesCollection>
+          <AccumulationChartSeries DataSource="GroupedFieldQtyData"
+              XName="GroupedFieldKey" YName="Qty" Radius="70%"
+              InnerRadius="40%" Name="QtyPerProductCategory"
+              Explode="true" ExplodeOffset="10%" ExplodeIndex="3">
+              <AccumulationDataLabelSettings Visible="true" Name="Label">
+                 <AccumulationChartDataLabelFont FontWeight="600" Color="White">
+
+                 </AccumulationChartDataLabelFont>
+              </AccumulationDataLabelSettings>
+          </AccumulationChartSeries>
+      </AccumulationChartSeriesCollection>
+    </SfAccumulationChart>
+</div>
+
 @code {
 
     List<GroupedFieldPriceModel> GroupedFieldPriceData { get; set; }
+    List<GroupedFieldQtyModel> GroupedFieldQtyData { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         GroupedFieldPriceData = await SalesOrderReportService.GetEmployeePricePerMonthData();
+        GroupedFieldQtyData = await SalesOrderReportService.GetQtyPerProductCategory();
     }
 }
