New Beginnings of prosperity

--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -1,4 +1,4 @@
-﻿@page "/EmployeeManagement"
+﻿@page "/Admin"
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Grids
