--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -25,18 +25,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/EmployeeManagement">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Employee Management  
+            <NavLink class="nav-link" href="/Admin">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Admin  
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ProductCatalog">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Products
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Charts">
-                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Charts
             </NavLink>
         </div>
         <div class="nav-item px-3">
