--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -36,7 +36,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="SRDashboard">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Dashboard
+                <span class="oi oi-list-rich" aria-hidden="true"></span> SRDashboard
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="TLDashboard">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> TLDashboard
             </NavLink>
         </div>
     </nav>
