--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> TLDashboard
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="SMDashboard">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> SMDashboard
+            </NavLink>
+        </div>
     </nav>
 </div>
 
