--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -49,6 +49,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> SMDashboard
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Organisation">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Organisation
+            </NavLink>
+        </div>
     </nav>
 </div>
 
