--- a/SalesManagementApp/App.razor
+++ b/SalesManagementApp/App.razor
@@ -1,7 +1,9 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@inject TokenProvider TokenProvider
+
+<CascadingAuthenticationState>
+<Router AppAssembly="@typeof(App).Assembly" PreferExactMatches = "@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
@@ -10,3 +12,14 @@
         </LayoutView>
     </NotFound>
 </Router>
+</CascadingAuthenticationState>
+@code{
+    [Parameter]
+    public TokenProvider InitialState { get; set; }
+
+    protected override Task OnInitializedAsync()
+    {
+        TokenProvider.XsrfToken = InitialState.XsrfToken;
+        return base.OnInitializedAsync();
+    }
+}
