--- a/SalesManagementApp/Pages/_Host.cshtml
+++ b/SalesManagementApp/Pages/_Host.cshtml
@@ -1,8 +1,16 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
+@using SalesManagementApp.Data;
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
 @namespace SalesManagementApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@{
+    var tokens = new TokenProvider
+            {
+                XsrfToken = Xsrf.GetAndStoreTokens(HttpContext).RequestToken
+            };
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +26,7 @@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" param-InitialState="tokens" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
