--- a/SalesManagementApp/_Imports.razor
+++ b/SalesManagementApp/_Imports.razor
@@ -13,3 +13,4 @@
 @using SalesManagementApp.Models;
 @using SalesManagementApp.Services.Contracts;
 @using SalesManagementApp.Models.ReportModels;
+@using SalesManagementApp.Data
