--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -34,16 +34,20 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Products
             </NavLink>
         </div>
+        <AuthorizeView Roles="SR">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="SRDashboard">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> SRDashboard
             </NavLink>
         </div>
+        </AuthorizeView>
+        <AuthorizeView Roles="TL">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="TLDashboard">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> TLDashboard
             </NavLink>
         </div>
+        </AuthorizeView>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="SMDashboard">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> SMDashboard
