--- a/SalesManagementApp/Shared/LoginDisplay.razor
+++ b/SalesManagementApp/Shared/LoginDisplay.razor
@@ -1,4 +1,5 @@
-﻿@inject TokenProvider TokenProvider
+﻿@using SalesManagementApp.Data;
+@inject TokenProvider TokenProvider
 <AuthorizeView>
     <Authorized>
         <a class="nav nav-link" href="Identity/Account/Manage/Index">
