We are finnishing this

--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin"
+@attribute [Authorize(Roles = "Admin, SM")]
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Grids
