--- a/SalesManagementApp/Pages/ProductCatalog.razor
+++ b/SalesManagementApp/Pages/ProductCatalog.razor
@@ -1,4 +1,5 @@
 ﻿@page "/ProductCatalog"
+@attribute [Authorize(Roles = "SR")]
 @using Syncfusion.Blazor.DropDowns
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Lists
