--- a/SalesManagementApp/Pages/TLDashboard.razor
+++ b/SalesManagementApp/Pages/TLDashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/TLDashboard"
+@attribute [Authorize(Roles = "TL")]
 @using Syncfusion.Blazor.Charts
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Layouts
