--- a/SalesManagementApp/Pages/SMDashboard.razor
+++ b/SalesManagementApp/Pages/SMDashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/SMDashboard"
+@attribute [Authorize(Roles = "SM")]
 @using Syncfusion.Blazor.Charts
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Layouts
