--- a/SalesManagementApp/Pages/SRDashboard.razor
+++ b/SalesManagementApp/Pages/SRDashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/SRDashboard"
+@attribute [Authorize(Roles = "SR")]
 @using Syncfusion.Blazor.Charts
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Layouts
