--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -24,11 +24,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <AuthorizeView Roles="Admin, SM ">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Admin">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Admin  
             </NavLink>
         </div>
+        </AuthorizeView>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ProductCatalog">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Products
@@ -48,21 +50,27 @@
             </NavLink>
         </div>
         </AuthorizeView>
+        <AuthorizeView Roles="SM">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="SMDashboard">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> SMDashboard
             </NavLink>
         </div>
+        </AuthorizeView>
+        <AuthorizeView Roles="SM">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Organisation">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Organisation
             </NavLink>
         </div>
+        </AuthorizeView>
+        <AuthorizeView Roles="SM, TL, SR">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Appointments">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Appointments
             </NavLink>
         </div>
+        </AuthorizeView>
     </nav>
 </div>
 
