--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -31,11 +31,13 @@
             </NavLink>
         </div>
         </AuthorizeView>
+        <AuthorizeView Roles="SR">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ProductCatalog">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Products
             </NavLink>
         </div>
+        </AuthorizeView>
         <AuthorizeView Roles="SR">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="SRDashboard">
