--- a/SalesManagementApp/Pages/Index.razor
+++ b/SalesManagementApp/Pages/Index.razor
@@ -1,9 +1,30 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Outdoor Excellence Sales Management</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="heading">
+    <h1 class="header-text mt-3">Sales Management</h1>
+    <div class="logo-img-container">
+        <img class="logo-img img-fluid" src="/Images/Oexl.png">
+    </div>
+</div>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<style>
+    .logo-img-container{
+        max-width:600px;
+        max-height:600px;
+    }
+    .logo-img{
+        height:100%;
+        width:100%;
+    }
+    .heading{
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+    }
+    .header-text{
+        text-align:center;
+    }
+</style>
