Finally, but if course

--- a/SalesManagementApp/wwwroot/css/site.css
+++ b/SalesManagementApp/wwwroot/css/site.css
@@ -1,7 +1,8 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Quicksand', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1:focus {
