--- a/SalesManagementApp/Pages/EmployeeManagement.razor
+++ b/SalesManagementApp/Pages/EmployeeManagement.razor
@@ -1,4 +1,4 @@
-﻿@page "/Admin"
+﻿@page "/EmployeeManagement"
 @attribute [Authorize(Roles = "Admin, SM")]
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.DropDowns
