--- a/SalesManagementApp/Pages/_Host.cshtml
+++ b/SalesManagementApp/Pages/_Host.cshtml
@@ -22,6 +22,7 @@
     <link href="SalesManagementApp.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <link href="_content/Syncfusion.Blazor.Themes/Bootstrap5.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"> </script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
