Help these migrations

--- a/SalesManagementApp/Shared/NavMenu.razor
+++ b/SalesManagementApp/Shared/NavMenu.razor
@@ -61,6 +61,11 @@
                 </NavLink>
             </div>
         </AuthorizeView>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="imageuploader">
+                <i class="fa fa-calendar"></i>&nbsp;&nbsp;Appointments
+            </NavLink>
+        </div>
     </nav>
 </div>
 
